修改了.gitignore文件

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 ### Java template ###
 *.class
 
-# Mobile Tools for Java (J2ME)
+# Mobile Tools for Java (J2ME) ###
 .mtj.tmp/
 # Package Files #
 *.jar
